Fix navbar wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -883,3 +883,7 @@ a {
     display: none;
   }
 }
+@media (max-width: 1224px) and (min-width: 769px) {
+  
+}
+
